--- a/ios/BulletTime/Base.lproj/Shoot.storyboard
+++ b/ios/BulletTime/Base.lproj/Shoot.storyboard
@@ -15,6 +15,8 @@
             <string>Circular-Black</string>
             <string>Circular-Black</string>
             <string>Circular-Black</string>
+            <string>Circular-Black</string>
+            <string>Circular-Black</string>
         </mutableArray>
         <mutableArray key="lineto-circular-bold.ttf">
             <string>Circular-Bold</string>
@@ -393,14 +395,6 @@
                                     <constraint firstAttribute="width" secondItem="qBx-9P-zJ9" secondAttribute="height" multiplier="1:1" id="JPb-7S-ZQt"/>
                                 </constraints>
                             </view>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="2vw-bl-suL">
-                                <rect key="frame" x="18" y="74" width="284" height="31"/>
-                                <color key="minimumTrackTintColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="maximumTrackTintColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="sliderValueChanged:" destination="4DP-q4-uh8" eventType="valueChanged" id="Nnc-DK-5Jt"/>
-                                </connections>
-                            </slider>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PEC-YQ-0Z9">
                                 <rect key="frame" x="0.0" y="444" width="320" height="124"/>
                                 <subviews>
@@ -415,27 +409,28 @@
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                 <real key="value" value="40"/>
                                             </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                                <color key="value" red="0.73333333333333328" green="0.73333333333333328" blue="0.73333333333333328" alpha="1" colorSpace="calibratedRGB"/>
-                                            </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                 <real key="value" value="9"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bra-6y-PRM" customClass="DesignableButton" customModule="BulletTime" customModuleProvider="target">
-                                        <rect key="frame" x="132" y="34" width="56" height="56"/>
+                                        <rect key="frame" x="127" y="29" width="66" height="66"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="56" id="46i-Hs-o4Q"/>
-                                            <constraint firstAttribute="width" constant="56" id="NOl-nb-kAP"/>
+                                            <constraint firstAttribute="height" constant="66" id="46i-Hs-o4Q"/>
+                                            <constraint firstAttribute="width" constant="66" id="NOl-nb-kAP"/>
                                         </constraints>
-                                        <state key="normal">
+                                        <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="18"/>
+                                        <state key="normal" title="OK">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="28"/>
+                                                <real key="value" value="33"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
@@ -451,25 +446,41 @@
                                     <constraint firstItem="bra-6y-PRM" firstAttribute="centerY" secondItem="gKP-MA-xbA" secondAttribute="centerY" id="x6A-eM-E8g"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Freeze it" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MvD-aR-YsR">
+                                <rect key="frame" x="20" y="50" width="209" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="NU1-uB-aAA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1N8-Qq-TRU">
+                                <rect key="frame" x="135" y="268" width="50" height="32"/>
+                                <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="0.80380097517730498" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="MvD-aR-YsR" firstAttribute="leading" secondItem="HIS-ex-O0c" secondAttribute="leading" constant="20" id="02f-JV-fdW"/>
                             <constraint firstItem="qBx-9P-zJ9" firstAttribute="centerX" secondItem="HIS-ex-O0c" secondAttribute="centerX" id="8Mg-vY-jL3"/>
                             <constraint firstItem="QbG-ve-cfs" firstAttribute="top" secondItem="PEC-YQ-0Z9" secondAttribute="bottom" id="Anp-Dz-92u"/>
                             <constraint firstItem="PEC-YQ-0Z9" firstAttribute="leading" secondItem="HIS-ex-O0c" secondAttribute="leading" id="BeM-73-n96"/>
+                            <constraint firstItem="1N8-Qq-TRU" firstAttribute="centerX" secondItem="qBx-9P-zJ9" secondAttribute="centerX" id="CDZ-nq-5em"/>
                             <constraint firstItem="qBx-9P-zJ9" firstAttribute="centerY" secondItem="HIS-ex-O0c" secondAttribute="centerY" id="JnU-QE-e8w"/>
                             <constraint firstItem="qBx-9P-zJ9" firstAttribute="leading" secondItem="HIS-ex-O0c" secondAttribute="leading" id="PWe-PQ-VyG"/>
                             <constraint firstAttribute="trailing" secondItem="qBx-9P-zJ9" secondAttribute="trailing" id="fhF-Bm-OMy"/>
                             <constraint firstItem="PEC-YQ-0Z9" firstAttribute="top" secondItem="qBx-9P-zJ9" secondAttribute="bottom" id="oM6-7c-jSw"/>
-                            <constraint firstAttribute="trailing" secondItem="2vw-bl-suL" secondAttribute="trailing" constant="20" id="qh6-rK-h45"/>
-                            <constraint firstItem="qBx-9P-zJ9" firstAttribute="top" secondItem="2vw-bl-suL" secondAttribute="bottom" constant="20" id="rz7-mb-tT1"/>
+                            <constraint firstItem="MvD-aR-YsR" firstAttribute="top" secondItem="vp5-OS-sr8" secondAttribute="bottom" constant="30" id="uQQ-tO-YaE"/>
+                            <constraint firstItem="1N8-Qq-TRU" firstAttribute="centerY" secondItem="qBx-9P-zJ9" secondAttribute="centerY" id="wqg-7d-4Rk"/>
                             <constraint firstAttribute="trailing" secondItem="PEC-YQ-0Z9" secondAttribute="trailing" id="xGi-iT-KhO"/>
-                            <constraint firstItem="2vw-bl-suL" firstAttribute="leading" secondItem="HIS-ex-O0c" secondAttribute="leading" constant="20" id="yHk-8J-FEf"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="playerView" destination="qBx-9P-zJ9" id="jFb-av-gSJ"/>
-                        <outlet property="slider" destination="2vw-bl-suL" id="Db2-bo-Qhy"/>
+                        <outlet property="progressLabel" destination="1N8-Qq-TRU" id="BeF-aR-r7h"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rKH-eR-yXM" userLabel="First Responder" sceneMemberID="firstResponder"/>
