--- a/ios/BulletTime/Base.lproj/Shoot.storyboard
+++ b/ios/BulletTime/Base.lproj/Shoot.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="iI3-dU-lul">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="iI3-dU-lul">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -17,8 +17,13 @@
             <string>Circular-Black</string>
             <string>Circular-Black</string>
             <string>Circular-Black</string>
+            <string>Circular-Black</string>
         </mutableArray>
         <mutableArray key="lineto-circular-bold.ttf">
+            <string>Circular-Bold</string>
+            <string>Circular-Bold</string>
+            <string>Circular-Bold</string>
+            <string>Circular-Bold</string>
             <string>Circular-Bold</string>
             <string>Circular-Bold</string>
             <string>Circular-Bold</string>
@@ -486,6 +491,170 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rKH-eR-yXM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1851" y="403"/>
+        </scene>
+        <!--Picker View Controller-->
+        <scene sceneID="j5N-Rg-SHD">
+            <objects>
+                <viewController storyboardIdentifier="picker" id="TLa-3s-f4N" customClass="PickerViewController" customModule="BulletTime" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fbF-1F-kaS"/>
+                        <viewControllerLayoutGuide type="bottom" id="jMN-CE-D85"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nxs-rA-a10">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A9u-bb-woP">
+                                <rect key="frame" x="0.0" y="124" width="320" height="320"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="A9u-bb-woP" secondAttribute="height" multiplier="1:1" id="rvg-uR-HC8"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OLq-dt-oeV">
+                                <rect key="frame" x="0.0" y="20" width="320" height="80"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="9fF-Kd-1yf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="27"/>
+                                <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="Pick one">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8PM-LR-m8s">
+                                <rect key="frame" x="275" y="40" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="Tfa-Xu-tX2"/>
+                                    <constraint firstAttribute="height" constant="40" id="z3B-5K-NUP"/>
+                                </constraints>
+                                <state key="normal" image="icon-back-white"/>
+                                <connections>
+                                    <action selector="back:" destination="fcO-U5-KJY" eventType="touchUpInside" id="MFi-mp-qTr"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sQQ-e1-lMf">
+                                <rect key="frame" x="0.0" y="444" width="320" height="124"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CBl-D5-pYm">
+                                        <rect key="frame" x="30" y="27" width="260" height="70"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tad-SE-MqN" customClass="DesignableView" customModule="BulletTime" customModuleProvider="target">
+                                                <rect key="frame" x="95" y="0.0" width="70" height="70"/>
+                                                <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="Tad-SE-MqN" secondAttribute="height" multiplier="1:1" id="6XQ-VM-AQV"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="35"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6S1-qC-yX4">
+                                                <rect key="frame" x="95" y="0.0" width="70" height="70"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="70" id="6AJ-Fo-uuc"/>
+                                                    <constraint firstAttribute="height" constant="70" id="a7A-bd-C4U"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-0.1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfJ-fQ-k1O">
+                                                <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="70" id="Q77-EZ-rhi"/>
+                                                    <constraint firstAttribute="width" constant="70" id="jnZ-sv-k7Z"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+0.1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mX8-kW-hLp">
+                                                <rect key="frame" x="190" y="0.0" width="70" height="70"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="70" id="F1A-kH-pki"/>
+                                                    <constraint firstAttribute="width" constant="70" id="IBP-Cd-48S"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QoW-AQ-TvU" customClass="DesignableButton" customModule="BulletTime" customModuleProvider="target">
+                                                <rect key="frame" x="104" y="9" width="52" height="52"/>
+                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="52" id="RhZ-hD-Kr6"/>
+                                                    <constraint firstAttribute="width" constant="52" id="oxN-U4-yKK"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="15"/>
+                                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="1"/>
+                                                <state key="normal" title="OK">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="26"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="buttonNextPressed:" destination="TLa-3s-f4N" eventType="touchUpInside" id="OZY-an-cIc"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="JfJ-fQ-k1O" firstAttribute="centerY" secondItem="CBl-D5-pYm" secondAttribute="centerY" id="3JE-Z7-A5e"/>
+                                            <constraint firstItem="6S1-qC-yX4" firstAttribute="centerX" secondItem="CBl-D5-pYm" secondAttribute="centerX" id="5c7-nH-a9J"/>
+                                            <constraint firstItem="Tad-SE-MqN" firstAttribute="top" secondItem="CBl-D5-pYm" secondAttribute="top" id="DbR-gT-kje"/>
+                                            <constraint firstAttribute="bottom" secondItem="Tad-SE-MqN" secondAttribute="bottom" id="HB2-vW-mfF"/>
+                                            <constraint firstAttribute="height" constant="70" id="PKq-0F-rrd"/>
+                                            <constraint firstItem="Tad-SE-MqN" firstAttribute="centerX" secondItem="CBl-D5-pYm" secondAttribute="centerX" id="QMc-tj-ORb"/>
+                                            <constraint firstItem="QoW-AQ-TvU" firstAttribute="centerX" secondItem="Tad-SE-MqN" secondAttribute="centerX" id="XgT-tK-W0M"/>
+                                            <constraint firstItem="mX8-kW-hLp" firstAttribute="centerY" secondItem="CBl-D5-pYm" secondAttribute="centerY" id="ciC-xi-q6t"/>
+                                            <constraint firstItem="6S1-qC-yX4" firstAttribute="centerY" secondItem="CBl-D5-pYm" secondAttribute="centerY" id="d2i-4y-7Dh"/>
+                                            <constraint firstAttribute="trailing" secondItem="mX8-kW-hLp" secondAttribute="trailing" id="hLv-Zh-VIT"/>
+                                            <constraint firstItem="JfJ-fQ-k1O" firstAttribute="leading" secondItem="CBl-D5-pYm" secondAttribute="leading" id="qNl-fe-0UU"/>
+                                            <constraint firstItem="QoW-AQ-TvU" firstAttribute="centerY" secondItem="Tad-SE-MqN" secondAttribute="centerY" id="vdA-FC-u5K"/>
+                                            <constraint firstAttribute="width" constant="260" id="wQv-VZ-lpv"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="CBl-D5-pYm" firstAttribute="centerY" secondItem="sQQ-e1-lMf" secondAttribute="centerY" id="aTr-Dz-6mI"/>
+                                    <constraint firstItem="CBl-D5-pYm" firstAttribute="centerX" secondItem="sQQ-e1-lMf" secondAttribute="centerX" id="dE3-oQ-xG4"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="A9u-bb-woP" firstAttribute="centerY" secondItem="nxs-rA-a10" secondAttribute="centerY" id="4fS-rN-jZU"/>
+                            <constraint firstItem="A9u-bb-woP" firstAttribute="leading" secondItem="nxs-rA-a10" secondAttribute="leading" id="BnV-O1-bNp"/>
+                            <constraint firstItem="sQQ-e1-lMf" firstAttribute="leading" secondItem="nxs-rA-a10" secondAttribute="leading" id="Cvx-a6-yfL"/>
+                            <constraint firstItem="OLq-dt-oeV" firstAttribute="top" secondItem="fbF-1F-kaS" secondAttribute="bottom" id="F0w-uh-BkK"/>
+                            <constraint firstItem="jMN-CE-D85" firstAttribute="top" secondItem="sQQ-e1-lMf" secondAttribute="bottom" id="IYU-lf-uaI"/>
+                            <constraint firstAttribute="trailing" secondItem="OLq-dt-oeV" secondAttribute="trailing" id="OQW-tV-A6m"/>
+                            <constraint firstAttribute="trailing" secondItem="sQQ-e1-lMf" secondAttribute="trailing" id="QVC-we-NVT"/>
+                            <constraint firstItem="OLq-dt-oeV" firstAttribute="leading" secondItem="nxs-rA-a10" secondAttribute="leading" id="XLb-Sj-uDF"/>
+                            <constraint firstAttribute="trailing" secondItem="8PM-LR-m8s" secondAttribute="trailing" constant="5" id="hO4-Ke-32I"/>
+                            <constraint firstItem="8PM-LR-m8s" firstAttribute="centerY" secondItem="OLq-dt-oeV" secondAttribute="centerY" id="oWP-OQ-qei"/>
+                            <constraint firstItem="sQQ-e1-lMf" firstAttribute="top" secondItem="A9u-bb-woP" secondAttribute="bottom" id="pnN-QZ-m5e"/>
+                            <constraint firstAttribute="trailing" secondItem="A9u-bb-woP" secondAttribute="trailing" id="qoY-aL-oLq"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="bgCenter" destination="QMc-tj-ORb" id="zkH-12-xeh"/>
+                        <outlet property="bgView" destination="Tad-SE-MqN" id="QKF-2v-wZ6"/>
+                        <outlet property="buttonNext" destination="QoW-AQ-TvU" id="e2R-K6-att"/>
+                        <outlet property="imageView" destination="A9u-bb-woP" id="XeH-Vo-TVE"/>
+                        <outlet property="pickerView" destination="CBl-D5-pYm" id="R8c-uo-bx0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="35s-6y-lqI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1847" y="1042"/>
         </scene>
         <!--Display View Controller-->
         <scene sceneID="TrN-fj-1wB">
